# ParakhAI

./: .gitignore  Makefile  README.md  hero.html  infer_image.py  package-lock.json  package.json  pyproject.toml  requirements.txt  their_app_dashboard.tsx  train_folder.py
.playwright-mcp/: page-2026-04-03T10-57-35-333Z.yml
DOCS/: parakh_ai_ml_architecture.md
frontend/: index.html  package-lock.json  package.json  script.cjs  tailwind.config.js  temp_old.tsx
frontend/mobile/: App.tsx  package-lock.json  package.json
frontend/public/: datamain.txt
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: AppDashboard.tsx  ChatbotWidget.tsx  Footer.tsx  HeroSequence.tsx  (+9 more)
parakh_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
parakh_ai/api/: main.py  middleware.py  schemas.py  telegram_bot.py
parakh_ai/benchmarks/: auroc_eval.py  latency_bench.py
parakh_ai/config/: default.yaml  edge.yaml
parakh_ai/core/: ai_analyst.py  backbone.py  coreset.py  exceptions.py  heatmap.py  padim.py  patchcore.py  scoring.py
parakh_ai/pipeline/: calibration.py  inference.py  preprocessing.py  streaming.py
parakh_ai/scripts/: demo_webcam.py  download_mvtec.py  download_visa.py  export_model.py  run_benchmark.py
parakh_ai/storage/: defect_log.py  model_store.py
tests/integration/: test_api_endpoints.py  test_full_pipeline.py  test_pipeline_performance.py
tests/unit/: test_backbone.py  test_calibration.py  test_coreset.py  test_heatmap.py  test_inference.py  test_padim.py  test_patchcore.py  test_preprocessing.py  test_scoring.py
(+8 files in other folders)
